Fixed byline alignment.

--- a/style.css
+++ b/style.css
@@ -147,8 +147,7 @@ footer {
 
 #byline_text {
   width: 600px;
-  margin-right: 150px;
-  margin-left: 10px;
+  margin-left: -30px;
 }
 
 #byline_text_sub {
